--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
-body{
+body {
   background-color: black;
   /* height: 3000px; */
-  font-family: Arial, sans-serif;}
-*{
-  box-sizing:border-box ;
-  scroll-behavior:smooth ;
-
+  font-family: Arial, sans-serif;
 }
-
+* {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
 
 .container {
   margin: 0 auto;
@@ -15,7 +14,8 @@ body{
 .menu {
   z-index: 2; /* Đặt menu trên cùng */
 
-  position: sticky; top: 0;
+  position: sticky;
+  top: 0;
   transform: translate(0%, 0%); /* Để căn giữa thẻ nav chính xác */
   background-color: rgba(0, 0, 0, 0.615); /* Màu nền cho thẻ nav */
   padding: 20px; /* Khoảng cách bên trong thẻ nav */
@@ -27,63 +27,55 @@ body{
   display: inline;
   padding: 20px;
 }
-.menu>ul>li>a{
+.menu > ul > li > a {
   color: white;
   text-decoration: none;
 }
-.chu{
+.chu {
   text-align: center;
   transform: translate(0%, -370%); /* Để căn giữa thẻ nav chính xác */
- color: rgb(232, 231, 231);
- margin-bottom: -12%;
- 
- 
+  color: rgb(232, 231, 231);
+  margin-bottom: -12%;
 }
-.chu h1{
+.chu h1 {
   animation: sparkle 2s infinite alternate;
   font-size: 75px;
   margin-bottom: -10px;
   text-shadow: 2px 2px 2px #000;
-
 }
 
 @keyframes sparkle {
   0% {
-      transform: scale(1);
-      opacity: 0.8;
+    transform: scale(1);
+    opacity: 0.8;
   }
   100% {
-      transform: scale(1.1);
-      opacity: 1;
+    transform: scale(1.1);
+    opacity: 1;
   }
 }
-.chu p{
+.chu p {
   font-size: 22px;
-  
 }
 .banner > img {
   object-fit: cover; /* Để hình ảnh tràn đầy phần nền */
   margin-top: -90px;
   width: 100%;
-
 }
 
 .dau {
   background-color: rgb(0, 0, 0);
   padding: 20px;
   text-align: center;
-  
-  
 }
 
 .dau > h1 {
   text-align: center;
   font-size: 45px;
-  color:rgb(228, 115, 115);
+  color: rgb(228, 115, 115);
   text-shadow: 2px 2px 2px #6f6f6f;
-
 }
-.tong1{
+.tong1 {
   display: flex;
   overflow: auto;
 }
@@ -93,66 +85,58 @@ body{
 
   display: flex;
 }
-.trai>video{
+.trai > video {
   width: 45%;
   margin-left: 15%;
   box-shadow: 0px 0px 30px white;
-  border-radius:100px;
-  
+  border-radius: 100px;
 }
-.phai{
+.phai {
   margin-top: 10%;
   width: 35%;
   margin-left: -22%;
-  
 }
-.phai>h1{
+.phai > h1 {
   color: rgb(228, 115, 115);
   font-size: 270%;
 }
-.phai>span{
+.phai > span {
   line-height: 1.5; /* Đặt khoảng cách giữa các dòng */
-  font-size:110%;
-  color: white
+  font-size: 110%;
+  color: white;
 }
-.phai strong{
+.phai strong {
   color: rgb(228, 115, 115);
   text-shadow: 2px 2px 2px #000;
-
 }
 
-
-
-
-
-.chuu{
-margin-bottom: -50%;
-} 
-.thongtin>video{
+.chuu {
+  margin-bottom: -50%;
+}
+.thongtin > video {
   width: 100%;
+  margin-bottom: -3.5%;
 }
 
-.tt{
+.tt {
   margin-left: 950px;
-  width:40%;
+  width: 40%;
   height: 40%;
   color: rgb(255, 255, 255);
   box-shadow: 0px 0px 10px rgb(8, 8, 8);
   background-color: rgba(11, 11, 11, 0.3); /* Màu nền cho thẻ nav */
   transform: translate(-40%, -170%); /* Để căn giữa thẻ nav chính xác */
 }
-.tt>p{
+.tt > p {
   font-size: 17px;
   padding: 35px;
   line-height: 1.5; /* Đặt khoảng cách giữa các dòng */
-
 }
 
 .phu222 {
   flex-direction: column;
   padding-top: 0%;
   padding-bottom: 5%;
-
 }
 
 .sptong {
@@ -175,29 +159,25 @@ margin-bottom: -50%;
   width: 100px;
   border-radius: 50%;
   height: 100px;
-
 }
 .sp:hover {
- /* opacity: 0.1; Giảm độ trong suốt của ảnh*/
+  /* opacity: 0.1; Giảm độ trong suốt của ảnh*/
   transition: opacity 0.3s ease; /* Thêm hiệu ứng chuyển đổi */
   transform: scale(1.2); /* Phóng to ảnh lên 1.2 lần kích thước ban đầu */
-
 }
-.ten{
-width: 330px;
-transform: translate(80%, -350%); /* Để căn giữa thẻ nav chính xác */
-font-size: 40px;
-font-style: normal;
-color: rgb(228, 115, 115);
-text-shadow: 3px 3px 3px #696969;
+.ten {
+  width: 330px;
+  transform: translate(80%, -350%); /* Để căn giữa thẻ nav chính xác */
+  font-size: 40px;
+  font-style: normal;
+  color: rgb(228, 115, 115);
+  text-shadow: 3px 3px 3px #696969;
 }
-.ds{
- display: flex;
- margin-left: 15%;
- 
+.ds {
+  display: flex;
+  margin-left: 15%;
 }
-.mon{
-
+.mon {
   text-decoration: none;
   color: rgb(255, 255, 255);
   text-align: center;
@@ -207,62 +187,58 @@ text-shadow: 3px 3px 3px #696969;
   border-radius: 50%;
   transform: translate(0%, -120%); /* Để căn giữa thẻ nav chính xác */
   box-shadow: 0px 0px 5px white;
-
 }
-.mon>img{
+.mon > img {
   width: 100px;
   height: 70%;
   border-radius: 30%;
 }
 .mon:hover {
-   opacity: 0.8; /*Giảm độ trong suốt của ảnh*/
-   transform: translate(0%, -120%); /* Để căn giữa thẻ nav chính xác */
+  opacity: 0.8; /*Giảm độ trong suốt của ảnh*/
+  transform: translate(0%, -120%); /* Để căn giữa thẻ nav chính xác */
   box-shadow: 0px 0px 10px black;
-  
-
- }
- .mon:hover img{
+}
+.mon:hover img {
   transform: scale(1.2); /* Phóng to ảnh lên 1.2 lần kích thước ban đầu */
- }
-.muc{
+}
+.muc {
   margin-top: -120px;
   color: rgb(254, 254, 254);
   text-align: center;
   padding-bottom: 20px;
 }
-.muc h1{
+.muc h1 {
   color: rgb(228, 115, 115);
 }
-.muc2{
+.muc2 {
   margin-top: 50px;
   color: rgb(254, 254, 254);
   text-align: center;
   padding-bottom: 20px;
-  
 }
-.tong2{
+.tong2 {
   margin-left: 2%;
   display: flex;
   margin-bottom: 2%;
   margin-top: 2%;
 }
-.phu2>img{
+.phu2 > img {
   width: 300px;
   height: 250px;
 }
-.phu2{
-  margin:10px ;
+.phu2 {
+  margin: 10px;
   text-align: center;
   padding: 20px;
   box-shadow: 0px 0px 10px white;
 }
-.phu2>p{
+.phu2 > p {
   text-decoration: line-through;
 }
-.phu2{
+.phu2 {
   color: white;
 }
-.phu2>button{
+.phu2 > button {
   width: 200px;
   padding: 10px;
   background-color: rgb(255, 255, 255);
@@ -270,42 +246,35 @@ text-shadow: 3px 3px 3px #696969;
   color: rgb(120, 6, 6);
   box-shadow: 0px 0px 5px rgb(255, 255, 255);
 }
-.phu2>button:hover{
+.phu2 > button:hover {
   background-color: brown;
   color: white;
   box-shadow: 0px 0px 5px white;
 }
-.phu2:hover{
+.phu2:hover {
   background-color: white;
   color: black;
-  
 }
-.duoi{
+.duoi {
   display: flex;
   color: white;
 }
-.cuoi{
+.cuoi {
   flex-direction: column;
   color: rgb(255, 255, 255);
   width: 100%;
- padding: 200px;
+  padding: 200px;
 }
-#cuoi{
+#cuoi {
   margin-left: -200px;
 }
 
-
-.map>iframe{
+.map > iframe {
   width: 100%;
 }
-.lienhe{
+.lienhe {
   background-color: white;
-  
+
   height: 550px;
-padding: 30px;
-
+  padding: 30px;
 }
-
-
-
-
