--- a/style.css
+++ b/style.css
@@ -57,12 +57,17 @@ body {
 .chu p {
   font-size: 22px;
 }
-.banner > img {
+.banner > img{
   object-fit: cover; /* Để hình ảnh tràn đầy phần nền */
   margin-top: -90px;
   width: 100%;
 }
-
+.banner>video{
+  object-fit: cover; /* Để hình ảnh tràn đầy phần nền */
+  margin-top: -90px;
+  width: 100%;
+  height: 500px;
+}
 .dau {
   background-color: rgb(0, 0, 0);
   padding: 20px;
@@ -72,8 +77,8 @@ body {
 .dau > h1 {
   text-align: center;
   font-size: 45px;
-  color: rgb(228, 115, 115);
-  text-shadow: 2px 2px 2px #6f6f6f;
+  color: rgb(255, 254, 254);
+  text-shadow: 3px 3px 3px #c92727;
 }
 .tong1 {
   display: flex;
@@ -170,8 +175,8 @@ body {
   transform: translate(80%, -350%); /* Để căn giữa thẻ nav chính xác */
   font-size: 40px;
   font-style: normal;
-  color: rgb(228, 115, 115);
-  text-shadow: 3px 3px 3px #696969;
+  color: rgb(255, 254, 254);
+  text-shadow: 5px 5px 5px #c92727;
 }
 .ds {
   display: flex;
@@ -187,7 +192,8 @@ body {
   border-radius: 50%;
   transform: translate(0%, -120%); /* Để căn giữa thẻ nav chính xác */
   box-shadow: 0px 0px 5px white;
-}
+} 
+
 .mon > img {
   width: 100px;
   height: 70%;
@@ -208,7 +214,8 @@ body {
   padding-bottom: 20px;
 }
 .muc h1 {
-  color: rgb(228, 115, 115);
+  color: rgb(255, 254, 254);
+  text-shadow: 2px 2px 2px #c92727;
 }
 .muc2 {
   margin-top: 50px;
