--- a/style.css
+++ b/style.css
@@ -223,6 +223,10 @@ body {
   text-align: center;
   padding-bottom: 20px;
 }
+.muc2 h1 {
+  color: rgb(255, 254, 254);
+  text-shadow: 2px 2px 2px #c92727;
+}
 .tong2 {
   margin-left: 2%;
   display: flex;
